syntax = "proto3";

package service;

option go_package = "internal/gen/proto/service;service";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  double latitude = 3;
  double longitude = 4;
}

message GetUserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  double latitude = 4;
  double longitude = 5;
}