syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mattiusz/based_backend/internal/gen/proto/v1";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUserByID(GetUserByIDRequest) returns (User);
}

message User {
  bytes user_id = 1;
  string email = 2;
  string display_name = 3;
  optional string profile_picture = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
  string email = 1;
  string display_name = 2;
  optional string profile_picture = 3;
}

message GetUserByIDRequest {
  bytes user_id = 1;
}